django_projects/pimp/fixtures/projects/1/samples/NEG/Beer_4_full1.mzXML
version https://git-lfs.github.com/spec/v1
oid sha256:9291542daffdec72c34813a181c469efc9d8078f7a405d5b58ee01bb2c00a5d2
size 16970131
